src/Utilities/antlr/scsParser.ts
// Generated from scs.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { scsListener } from "./scsListener";
import { scsVisitor } from "./scsVisitor";


export class scsParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly ID_SYSTEM = 64;
	public static readonly ALIAS_SYMBOLS = 65;
	public static readonly CONTOUR_BEGIN = 66;
	public static readonly CONTOUR_END = 67;
	public static readonly CONTENT_BODY = 68;
	public static readonly LINK = 69;
	public static readonly EDGE_ATTR = 70;
	public static readonly LINE_TERMINATOR = 71;
	public static readonly LINE_COMMENT = 72;
	public static readonly MULTINE_COMMENT = 73;
	public static readonly WS = 74;
	public static readonly RULE_content = 0;
	public static readonly RULE_contour = 1;
	public static readonly RULE_connector = 2;
	public static readonly RULE_syntax = 3;
	public static readonly RULE_sentence_wrap = 4;
	public static readonly RULE_sentence = 5;
	public static readonly RULE_ifdf_alias = 6;
	public static readonly RULE_idtf_system = 7;
	public static readonly RULE_sentence_assign = 8;
	public static readonly RULE_idtf_lvl1_preffix = 9;
	public static readonly RULE_idtf_lvl1_value = 10;
	public static readonly RULE_idtf_lvl1 = 11;
	public static readonly RULE_idtf_edge = 12;
	public static readonly RULE_idtf_set = 13;
	public static readonly RULE_idtf_atomic = 14;
	public static readonly RULE_idtf_url = 15;
	public static readonly RULE_idtf_common = 16;
	public static readonly RULE_idtf_list = 17;
	public static readonly RULE_internal_sentence = 18;
	public static readonly RULE_internal_sentence_list = 19;
	public static readonly RULE_sentence_lvl1 = 20;
	public static readonly RULE_sentence_lvl_4_list_item = 21;
	public static readonly RULE_sentence_lvl_common = 22;
	public static readonly RULE_attr_list = 23;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"content", "contour", "connector", "syntax", "sentence_wrap", "sentence", 
		"ifdf_alias", "idtf_system", "sentence_assign", "idtf_lvl1_preffix", "idtf_lvl1_value", 
		"idtf_lvl1", "idtf_edge", "idtf_set", "idtf_atomic", "idtf_url", "idtf_common", 
		"idtf_list", "internal_sentence", "internal_sentence_list", "sentence_lvl1", 
		"sentence_lvl_4_list_item", "sentence_lvl_common", "attr_list",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'_'", "'<>'", "'>'", "'<'", "'..>'", "'<..'", "'->'", "'<-'", 
		"'<=>'", "'=>'", "'<='", "'-|>'", "'<|-'", "'-/>'", "'</-'", "'~>'", "'<~'", 
		"'~|>'", "'<|~'", "'~/>'", "'</~'", "'_<>'", "'_>'", "'_<'", "'_..>'", 
		"'_<..'", "'_->'", "'_<-'", "'_<=>'", "'_=>'", "'_<='", "'_-|>'", "'_<|-'", 
		"'_-/>'", "'_</-'", "'_~>'", "'_<~'", "'_~|>'", "'_<|~'", "'_~/>'", "'_</~'", 
		"';;'", "'...'", "'='", "'sc_node'", "'sc_link'", "'sc_edge_dcommon'", 
		"'sc_edge_ucommon'", "'sc_edge_main'", "'sc_edge_access'", "'sc_arc_common'", 
		"'sc_edge'", "'sc_arc_main'", "'sc_arc_access'", "'#'", "'('", "')'", 
		"'{'", "';'", "'}'", "'(*'", "'*)'", "'|'", undefined, undefined, "'[*'", 
		"'*]'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "ID_SYSTEM", "ALIAS_SYMBOLS", "CONTOUR_BEGIN", "CONTOUR_END", 
		"CONTENT_BODY", "LINK", "EDGE_ATTR", "LINE_TERMINATOR", "LINE_COMMENT", 
		"MULTINE_COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(scsParser._LITERAL_NAMES, scsParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return scsParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "scs.g4"; }

	// @Override
	public get ruleNames(): string[] { return scsParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return scsParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(scsParser._ATN, this);
	}
	// @RuleVersion(0)
	public content(): ContentContext {
		let _localctx: ContentContext = new ContentContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, scsParser.RULE_content);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === scsParser.T__0) {
				{
				this.state = 48;
				this.match(scsParser.T__0);
				}
			}

			this.state = 51;
			_localctx._c = this.match(scsParser.CONTENT_BODY);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public contour(): ContourContext {
		let _localctx: ContourContext = new ContourContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, scsParser.RULE_contour);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 53;
			this.match(scsParser.CONTOUR_BEGIN);
			{
			this.state = 57;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === scsParser.T__0 || ((((_la - 43)) & ~0x1F) === 0 && ((1 << (_la - 43)) & ((1 << (scsParser.T__42 - 43)) | (1 << (scsParser.T__44 - 43)) | (1 << (scsParser.T__45 - 43)) | (1 << (scsParser.T__46 - 43)) | (1 << (scsParser.T__47 - 43)) | (1 << (scsParser.T__48 - 43)) | (1 << (scsParser.T__49 - 43)) | (1 << (scsParser.T__50 - 43)) | (1 << (scsParser.T__51 - 43)) | (1 << (scsParser.T__52 - 43)) | (1 << (scsParser.T__53 - 43)) | (1 << (scsParser.T__55 - 43)) | (1 << (scsParser.T__57 - 43)) | (1 << (scsParser.ID_SYSTEM - 43)) | (1 << (scsParser.ALIAS_SYMBOLS - 43)) | (1 << (scsParser.CONTOUR_BEGIN - 43)) | (1 << (scsParser.CONTENT_BODY - 43)) | (1 << (scsParser.LINK - 43)))) !== 0)) {
				{
				{
				this.state = 54;
				this.sentence_wrap();
				}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
			this.state = 60;
			this.match(scsParser.CONTOUR_END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public connector(): ConnectorContext {
		let _localctx: ConnectorContext = new ConnectorContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, scsParser.RULE_connector);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 62;
			_localctx._c = this._input.LT(1);
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << scsParser.T__1) | (1 << scsParser.T__2) | (1 << scsParser.T__3) | (1 << scsParser.T__4) | (1 << scsParser.T__5) | (1 << scsParser.T__6) | (1 << scsParser.T__7) | (1 << scsParser.T__8) | (1 << scsParser.T__9) | (1 << scsParser.T__10) | (1 << scsParser.T__11) | (1 << scsParser.T__12) | (1 << scsParser.T__13) | (1 << scsParser.T__14) | (1 << scsParser.T__15) | (1 << scsParser.T__16) | (1 << scsParser.T__17) | (1 << scsParser.T__18) | (1 << scsParser.T__19) | (1 << scsParser.T__20) | (1 << scsParser.T__21) | (1 << scsParser.T__22) | (1 << scsParser.T__23) | (1 << scsParser.T__24) | (1 << scsParser.T__25) | (1 << scsParser.T__26) | (1 << scsParser.T__27) | (1 << scsParser.T__28) | (1 << scsParser.T__29) | (1 << scsParser.T__30))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (scsParser.T__31 - 32)) | (1 << (scsParser.T__32 - 32)) | (1 << (scsParser.T__33 - 32)) | (1 << (scsParser.T__34 - 32)) | (1 << (scsParser.T__35 - 32)) | (1 << (scsParser.T__36 - 32)) | (1 << (scsParser.T__37 - 32)) | (1 << (scsParser.T__38 - 32)) | (1 << (scsParser.T__39 - 32)) | (1 << (scsParser.T__40 - 32)))) !== 0))) {
				_localctx._c = this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public syntax(): SyntaxContext {
		let _localctx: SyntaxContext = new SyntaxContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, scsParser.RULE_syntax);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === scsParser.T__0 || ((((_la - 43)) & ~0x1F) === 0 && ((1 << (_la - 43)) & ((1 << (scsParser.T__42 - 43)) | (1 << (scsParser.T__44 - 43)) | (1 << (scsParser.T__45 - 43)) | (1 << (scsParser.T__46 - 43)) | (1 << (scsParser.T__47 - 43)) | (1 << (scsParser.T__48 - 43)) | (1 << (scsParser.T__49 - 43)) | (1 << (scsParser.T__50 - 43)) | (1 << (scsParser.T__51 - 43)) | (1 << (scsParser.T__52 - 43)) | (1 << (scsParser.T__53 - 43)) | (1 << (scsParser.T__55 - 43)) | (1 << (scsParser.T__57 - 43)) | (1 << (scsParser.ID_SYSTEM - 43)) | (1 << (scsParser.ALIAS_SYMBOLS - 43)) | (1 << (scsParser.CONTOUR_BEGIN - 43)) | (1 << (scsParser.CONTENT_BODY - 43)) | (1 << (scsParser.LINK - 43)))) !== 0)) {
				{
				{
				this.state = 64;
				this.sentence_wrap();
				}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 70;
			this.match(scsParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sentence_wrap(): Sentence_wrapContext {
		let _localctx: Sentence_wrapContext = new Sentence_wrapContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, scsParser.RULE_sentence_wrap);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 72;
			this.sentence();
			this.state = 73;
			this.match(scsParser.T__41);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sentence(): SentenceContext {
		let _localctx: SentenceContext = new SentenceContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, scsParser.RULE_sentence);
		try {
			this.state = 78;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 75;
				this.sentence_lvl1();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 76;
				this.sentence_assign();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 77;
				this.sentence_lvl_common();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifdf_alias(): Ifdf_aliasContext {
		let _localctx: Ifdf_aliasContext = new Ifdf_aliasContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, scsParser.RULE_ifdf_alias);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 80;
			this.match(scsParser.ALIAS_SYMBOLS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public idtf_system(): Idtf_systemContext {
		let _localctx: Idtf_systemContext = new Idtf_systemContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, scsParser.RULE_idtf_system);
		try {
			this.state = 85;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case scsParser.ID_SYSTEM:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 82;
				this.match(scsParser.ID_SYSTEM);
				}
				break;
			case scsParser.T__42:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 83;
				this.match(scsParser.T__42);
				}
				break;
			case scsParser.T__44:
			case scsParser.T__45:
			case scsParser.T__46:
			case scsParser.T__47:
			case scsParser.T__48:
			case scsParser.T__49:
			case scsParser.T__50:
			case scsParser.T__51:
			case scsParser.T__52:
			case scsParser.T__53:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 84;
				_localctx._type = this.idtf_lvl1_preffix();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sentence_assign(): Sentence_assignContext {
		let _localctx: Sentence_assignContext = new Sentence_assignContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, scsParser.RULE_sentence_assign);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 87;
			this.match(scsParser.ALIAS_SYMBOLS);
			this.state = 88;
			this.match(scsParser.T__43);
			this.state = 89;
			_localctx._i = this.idtf_common();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public idtf_lvl1_preffix(): Idtf_lvl1_preffixContext {
		let _localctx: Idtf_lvl1_preffixContext = new Idtf_lvl1_preffixContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, scsParser.RULE_idtf_lvl1_preffix);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 91;
			_localctx._type = this._input.LT(1);
			_la = this._input.LA(1);
			if (!(((((_la - 45)) & ~0x1F) === 0 && ((1 << (_la - 45)) & ((1 << (scsParser.T__44 - 45)) | (1 << (scsParser.T__45 - 45)) | (1 << (scsParser.T__46 - 45)) | (1 << (scsParser.T__47 - 45)) | (1 << (scsParser.T__48 - 45)) | (1 << (scsParser.T__49 - 45)) | (1 << (scsParser.T__50 - 45)) | (1 << (scsParser.T__51 - 45)) | (1 << (scsParser.T__52 - 45)) | (1 << (scsParser.T__53 - 45)))) !== 0))) {
				_localctx._type = this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public idtf_lvl1_value(): Idtf_lvl1_valueContext {
		let _localctx: Idtf_lvl1_valueContext = new Idtf_lvl1_valueContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, scsParser.RULE_idtf_lvl1_value);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			_localctx._type = this.idtf_lvl1_preffix();
			this.state = 94;
			this.match(scsParser.T__54);
			this.state = 95;
			_localctx._i = this.match(scsParser.ID_SYSTEM);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public idtf_lvl1(): Idtf_lvl1Context {
		let _localctx: Idtf_lvl1Context = new Idtf_lvl1Context(this._ctx, this.state);
		this.enterRule(_localctx, 22, scsParser.RULE_idtf_lvl1);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 97;
			this.idtf_lvl1_value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public idtf_edge(): Idtf_edgeContext {
		let _localctx: Idtf_edgeContext = new Idtf_edgeContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, scsParser.RULE_idtf_edge);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 99;
			this.match(scsParser.T__55);
			this.state = 100;
			_localctx._src = this.idtf_atomic();
			this.state = 101;
			_localctx._c = this.connector();
			this.state = 103;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				{
				this.state = 102;
				_localctx._attrs = this.attr_list();
				}
				break;
			}
			this.state = 105;
			_localctx._trg = this.idtf_atomic();
			this.state = 106;
			this.match(scsParser.T__56);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public idtf_set(): Idtf_setContext {
		let _localctx: Idtf_setContext = new Idtf_setContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, scsParser.RULE_idtf_set);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this.match(scsParser.T__57);
			this.state = 110;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				{
				this.state = 109;
				_localctx._a1 = this.attr_list();
				}
				break;
			}
			this.state = 112;
			_localctx._i1 = this.idtf_common();
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === scsParser.T__58) {
				{
				{
				this.state = 113;
				this.match(scsParser.T__58);
				this.state = 115;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
				case 1:
					{
					this.state = 114;
					_localctx._a2 = this.attr_list();
					}
					break;
				}
				this.state = 117;
				_localctx._i2 = this.idtf_common();
				}
				}
				this.state = 122;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 123;
			this.match(scsParser.T__59);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public idtf_atomic(): Idtf_atomicContext {
		let _localctx: Idtf_atomicContext = new Idtf_atomicContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, scsParser.RULE_idtf_atomic);
		try {
			this.state = 127;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case scsParser.ALIAS_SYMBOLS:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 125;
				_localctx._a = this.ifdf_alias();
				}
				break;
			case scsParser.T__42:
			case scsParser.T__44:
			case scsParser.T__45:
			case scsParser.T__46:
			case scsParser.T__47:
			case scsParser.T__48:
			case scsParser.T__49:
			case scsParser.T__50:
			case scsParser.T__51:
			case scsParser.T__52:
			case scsParser.T__53:
			case scsParser.ID_SYSTEM:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 126;
				_localctx._is = this.idtf_system();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public idtf_url(): Idtf_urlContext {
		let _localctx: Idtf_urlContext = new Idtf_urlContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, scsParser.RULE_idtf_url);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this.match(scsParser.LINK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public idtf_common(): Idtf_commonContext {
		let _localctx: Idtf_commonContext = new Idtf_commonContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, scsParser.RULE_idtf_common);
		try {
			this.state = 137;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case scsParser.T__42:
			case scsParser.T__44:
			case scsParser.T__45:
			case scsParser.T__46:
			case scsParser.T__47:
			case scsParser.T__48:
			case scsParser.T__49:
			case scsParser.T__50:
			case scsParser.T__51:
			case scsParser.T__52:
